ortho_config/tests/ui/short_flag_collision.stderr
error: unable to derive a short flag; supply `cli_short` to disambiguate
 --> tests/ui/short_flag_collision.rs:7:5
  |
7 |     V: Option<String>,
  |     ^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/short_flag_collision.rs:8:2
  |
8 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/short_flag_collision.rs`
